--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@ngxs/store": "^18.0.0",
     "express": "^4.18.2",
     "ng-zorro-antd": "^18.0.0",
+    "@ant-design/icons-angular": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-devkit/core": "^18.0.0",
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@types/express": "^4.17.17",
